# Text_local_search_engine

./: CMakeLists.txt  README.md
env/: config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndexTests.cpp  SearchServerTests.cpp
